MySQL adaptation and first migration

--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-573d3624-efa6-4592-9d5d-42718ba26f6b;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMvcContext": "Server=localhost;userid=root;password=admin;Database=SalesWebMvc"
   }
 }
